k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: celsius-to-fahrenheit-service

spec:
  type: ClusterIP

  selector:
    app: celsius-to-fahrenheit

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
